# Quantitative_Investment

./: .env  .gitignore  .pdm.toml  deeper_reform.py  deeper_reform.txt  deeper_reform_sort.txt  macd_predict.py  pyproject.toml  social_funding.py  中央全面深化改革委员会.html  中央全面深化改革委员会.txt
akshare/: akshare接口笔记.md  beixiang.txt  daily_data_20220617.py  financing_20220628.ipynb  first_20220613.ipynb  first_20220613.py  new_short_recover_20220915.txt  option2_20220618.html  option_20220618.html  options_20220618.py  options_selenium_20220620.py  rebuild_20220914.py  short_20220620.py  short_20220702.py  short_recover_20220915.txt  yeji_20220624.ipynb  zxjt_20220622.ipynb  中信建投涨停（220622之前）.xlsx
akshare/比较tushare和choice的成交比/: 1017a.txt
my_scripts/: all_pb.py  deeper_reform.py  deeper_reform.txt  month_between.py  social_funding.py  zhengquan_volumn.py  zhengquan_volumn_2022.csv  zq_vs_sh.py
openpyxl/: empty_book.xlsx  new_20220711.py
seaborn/: 04.14-Visualization-With-Seaborn.ipynb  m2_2022_06_21.ipynb
tushare/: D:\我的坚果云\data_xlsx 数据记录\20220617 Daily data\20221111_data.txt  short_20221013.py
tushare/daily_data/: 1017.txt  20221017.csv  20221018.csv  20221111.csv  20221114.csv  20221114_data.txt  choice1017.csv  choice1018.csv  compare.py  stock_compare.py
