[project]
name = ""
version = ""
description = ""
authors = [
    {name = "rechain22", email = "guorch29@gmail.com"},
]
dependencies = [
    "akshare>=1.6.15",
    "jupyterlab>=3.4.3",
    "selenium>=4.2.0",
    "matplotlib>=3.5.2",
    "seaborn>=0.11.2",
    "scipy>=1.6.1",
]
requires-python = ">=3.6"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
